# flippers

./: Flippers.hs  LICENSE  README.md  flippers.cabal
src/Control/: Flippers.hs
src/Data/Function/: BrailleFlippers.hs  Flippers.hs
