name:           flippers
version:        1.0.1
license:        BSD3
license-file:   LICENSE
author:         Christian Marie <christian@ponies.io>
maintainer:     Christian Marie
description:    flip1 to flip9, reverse1 to reverse9
synopsis:       Variations on flip for multiple arguments
category:       Other
build-type:     Simple
cabal-version:  >= 1.10
source-repository head
  type: git
  location: https://github.com/christian-marie/flippers/

library
  build-depends:       base >=4.6 && <5.0
  default-language:    Haskell2010
  exposed-modules:     Data.Function.Flippers
                       Data.Function.BrailleFlippers
  hs-source-dirs:      src/
